--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
 		"@wordpress/icons": "^9.5.0",
 		"@wordpress/primitives": "^3.12.0",
 		"@wordpress/rich-text": "^5.12.0",
-		"appwrite": "^10.2.0",
 		"babel-eslint": "^10.1.0",
 		"babel-preset-react": "^6.24.1",
 		"bezier-easing-editor": "^0.8.0",
+		"caniuse-lite": "^1.0.30001476",
 		"classnames": "^2.3.1",
 		"crisp-sdk-web": "^1.0.15",
 		"css-to-react-native": "^3.0.0",
@@ -79,7 +79,7 @@
 		"@babel/plugin-transform-spread": "^7.18.9",
 		"@prettier/plugin-php": "^0.18.9",
 		"@wordpress/base-styles": "^4.7.0",
-		"@wordpress/e2e-test-utils": "9.3.3",
+		"@wordpress/e2e-test-utils": "^7.10.0",
 		"@wordpress/env": "^5.0.0",
 		"@wordpress/jest-preset-default": "^8.5.0",
 		"@wordpress/scripts": "^23.6.0",
